# prime-research-tool

./: Cargo.toml  README.md
.github/workflows/: ci.yml
prime-tool/: Cargo.toml
prime-tool-bench/: Cargo.toml
prime-tool-bench/src/: main.rs
prime-tool-cli/: Cargo.toml
prime-tool-cli/src/: benchmarks.rs  main.rs  output.rs  plotting.rs
prime-tool-web/: Cargo.toml
prime-tool-web/src/: main.rs
prime-tool/benches/: distributed_bench.rs  factorization_bench.rs  gaps_bench.rs  primality_bench.rs  sieve_bench.rs
prime-tool/src/: algorithms.rs  distributed.rs  error.rs  factorization.rs  gaps.rs  lib.rs  sieve.rs
