[workspace]
members = [
    "prime-tool",
    "prime-tool-cli",
    "prime-tool-web",
    "prime-tool-bench"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
plotters = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
comfy-table = "7.1"
once_cell = "1.19"
futures = "0.3"